# object_store_ffi

./: Cargo.toml  Cross.toml  README.md
.cargo/: config.toml
.github/workflows/: development.yml  release.yml
benches/: baseline.rs  overhead.rs
src/: crud_ops.rs  encryption.rs  error.rs  lib.rs  list.rs  metrics.rs  ops.rs  query.rs  stream.rs  util.rs
src/snowflake/: client.rs  kms.rs  mod.rs  resolver.rs
