[package]
name = "object_store_ffi"
version = "0.6.5"
edition = "2021"

[[bench]]
harness = false
name = "baseline"

[[bench]]
harness = false
name = "overhead"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]
bench = false

# https://doc.rust-lang.org/cargo/reference/profiles.html
[profile.release]
debug = 1

[dependencies]
tokio = { version = "1.32.0", features = ["rt-multi-thread", "macros", "signal", "time"] }
tokio-util = { version = "0.7", default-features = false, features = ["io"] }
bytes = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures-util = "0.3"
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls", "trust-dns"] }
# object_store = { version = "0.8", features = ["azure", "aws"] }
# Pinned to a specific commit while waiting for the next release
object_store = { git = "https://github.com/andrebsguedes/arrow-rs.git", tag = "v0.9.0-backport1", features = ["azure", "aws"] }
thiserror = "1"
anyhow = { version = "1", features = ["backtrace"] }
once_cell = "1.18"
async-channel = "1.9.0"
crossbeam-queue = "0.3.8"
moka = { version = "0.12.6", features = ["future"] }
url = "2.4"
serde = "1"
serde_json = "1"
regex = "1.10"
backoff = "0.4"
hyper = { version = "0.14", default-features = false }
flate2 = { version = "1.0.28", features=["zlib-ng"], default-features = false}
async-compression = { version = "0.4.6", default-features = false, features = ["tokio", "gzip", "zlib", "deflate", "zstd"] }

[dev-dependencies]
criterion = { version = "0.4", default-features = false, features = ["cargo_bench_support", "html_reports"] }
