[package]
name = "object_store_ffi"
version = "0.9.0"
edition = "2021"

[[bench]]
harness = false
name = "baseline"

[[bench]]
harness = false
name = "overhead"

[[bin]]
name = "sfcp"
path = "src/bin/sfcp.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]
bench = false

# https://doc.rust-lang.org/cargo/reference/profiles.html
[profile.release]
debug = true

[features]
default = ["julia"]
julia = []
sfcp = ["clap"]

[dependencies]
tokio = { version = "1.32.0", features = ["rt-multi-thread", "macros", "signal", "time"] }
tokio-util = { version = "0.7", default-features = false, features = ["io"] }
bytes = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures-util = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "hickory-dns"] }
# object_store = { version = "0.10.1", features = ["azure", "aws"] }
# Pinned to a specific commit while waiting for upstream
object_store = { git = "https://github.com/andrebsguedes/arrow-rs.git", tag = "v0.10.2-beta1", features = ["azure", "aws", "experimental-azure-list-offset", "experimental-arbitrary-list-prefix"] }
thiserror = "1"
anyhow = { version = "1", features = ["backtrace"] }
once_cell = "1.18"
async-channel = "1.9.0"
crossbeam-queue = "0.3.8"
moka = { version = "0.12.6", features = ["future"] }
url = "2.4"
serde = "1"
serde_json = "1"
regex = "1.10"
backoff = "0.4"
hyper = { version = "1.2", default-features = false }
flate2 = { version = "1.0.28", features=["zlib-ng"], default-features = false}
async-compression = { version = "0.4.6", default-features = false, features = ["tokio", "gzip", "zlib", "deflate", "zstd"] }
flume = "0.11.0"
pin-project = "1.1.5"
uuid = { version = "1.10.0", features = ["v4"] }
base64 = "0.22.1"
rand = "0.8.5"
zeroize = "1.8.1"
async-trait = "0.1.81"
serde_path_to_error = "0.1.16"
metrics = "0.23.0"
metrics-util = "0.17.0"
quanta = "0.12.3"
walkdir = "2.5.0"

clap = { version = "4.4", features = ["derive", "env"], optional = true }

[target.'cfg(not(target_os = "macos"))'.dependencies]
openssl = { version = "0.10.66" }

[target.'cfg(target_os = "macos")'.dependencies]
openssl = { version = "0.10.66", features = ["vendored"] }

[dev-dependencies]
criterion = { version = "0.4", default-features = false, features = ["cargo_bench_support", "html_reports"] }
